// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transactions List > should render the \`TransactionsList\` component in "compact" mode 1`] = `
<dl
  class="detail-list"
>
  <dt
    class="details-list__term details-list__term--table"
  >
     
    ID
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <a
      class="dusk-anchor dusk-anchor--on-surface transaction-details__list-link"
      href="/some-base-path/transactions/transaction?id=4877687c2dbf154248d3ddee9ba0d81e3431f39056f82a46819da041d4ac0e04"
    >
      4877687c2dbf154248d3ddee9ba0d8...31f39056f82a46819da041d4ac0e04
    </a>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    relative time
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <time
      class="dusk-relative-time transaction-details__list-timestamp"
      datetime="2024-04-16T06:39:09.000Z"
      slot="definition"
    >
      last month
    </time>
  </dd>
   
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Fee
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    0.000290766
     DUSK
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Status
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <span
      class="dusk-badge dusk-badge--variant-success explorer-badge"
    >
      success
    </span>
    
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Type
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <span
      class="dusk-badge dusk-badge--variant-neutral explorer-badge"
    >
      transfer
    </span>
    
  </dd>
</dl>
`;

exports[`Transactions List > should render the \`TransactionsList\` component in "full" mode 1`] = `
<dl
  class="detail-list"
>
  <dt
    class="details-list__term details-list__term--table"
  >
     
    ID
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <a
      class="dusk-anchor dusk-anchor--on-surface transaction-details__list-link"
      href="/some-base-path/transactions/transaction?id=4877687c2dbf154248d3ddee9ba0d81e3431f39056f82a46819da041d4ac0e04"
    >
      4877687c2dbf154248d3ddee9ba0d8...31f39056f82a46819da041d4ac0e04
    </a>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    relative time
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <time
      class="dusk-relative-time transaction-details__list-timestamp"
      datetime="2024-04-16T06:39:09.000Z"
      slot="definition"
    >
      last month
    </time>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Gas Price
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    1
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Gas Limit
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    500,000,000
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Fee
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    0.000290766
     DUSK
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Status
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <span
      class="dusk-badge dusk-badge--variant-success explorer-badge"
    >
      success
    </span>
    
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Type
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <span
      class="dusk-badge dusk-badge--variant-neutral explorer-badge"
    >
      transfer
    </span>
    
  </dd>
</dl>
`;
